update some api, update track model
